# http-server

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
Apps/ChatServer/include/: ChatServer.h
Apps/ChatServer/include/AIUtil/: AIFactory.h  AIHelper.h  AISpeechProcessor.h  AIStrategy.h  AIToolRegistry.h  ImageRecognizer.h
Apps/ChatServer/src/: ChatServer.cpp  main.cpp
Apps/ChatServer/src/AIUtil/: AIHelper.cpp  AIToolRegistry.cpp
Apps/GomokuServer/include/: GomokuServer.h
Apps/GomokuServer/resource/: ChessGameVsAi.html  entry.html  menu.html
Apps/GomokuServer/src/: GomokuServer.cpp
HttpServer/include/http/: HttpServer.h
HttpServer/include/middleware/cors/: CorsConfig.h
HttpServer/include/router/: Router.h
HttpServer/include/ssl/: SslConnection.h  SslContext.h
HttpServer/include/utils/: FileUtil.h  LogUtil.h
HttpServer/include/utils/db/: DbConnection.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer/src/middleware/: MiddlewareChain.cpp
HttpServer/src/middleware/cors/: CorsMiddleware.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: Session.cpp  SessionManager.cpp  SessionStorage.cpp
HttpServer/src/ssl/: SslConfig.cpp  SslConnection.cpp  SslContext.cpp
HttpServer/src/utils/: LogUtil.cpp
HttpServer/src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
WebApps/GomokuServer/include/: AiGame.h  GomokuServer.h
WebApps/GomokuServer/src/: AiGame.cpp  GomokuServer.cpp  main.cpp
tests/: test_sql_injection.cpp
